# wput

./: ChangeLog  INSTALL  Makefile  Makefile.in  TODO  config.status  configure  configure.in  releasewput.sh
debian/: changelog  clean  control  copyright  debian-autotools.mk  debian-save-restore.mk  debian-vars.mk  docs  install  rules  source.lintian-overrides  watch  wput.docs  wput.examples  wput.install  wput.manpages
debian/man/: README  diff.sh  wput.1-debian.patch
debian/man/debian/: wput.1
debian/man/original/: wput.1
debian/patches/: 30-man-doc--wput.1-hyphens.dpatch  30-man-doc--wput.1-hyphens.patch  31-wput.1--option-order.patch  40-src--Makefile.in.patch  libtls-detection.patch  series  spelling-fixes.patch
doc/: passwordfile  wdel.1  wput.1  wputrc
po/: LINGUAS  Makefile  Makevars  POTFILES  POTFILES.in  cs.po  da.po  de.gmo  de.po  el.po  en_GB.po  es.po  fi.po  fr.po  gl.po  it.gmo  it.po  ja.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  tr.po  uk.po  wput.pot  zh.po  zh_CN.po  zh_HK.po
src/: Makefile  Makefile.in  config.h  config.h.in  ftp-ls.c  ftp.c  ftplib.c  ftplib.h  netrc.c  progress.c  queue.c  socketlib.c  socketlib.h  utils.c  wdel.c  windows.h  wput.c  wput.h
src/msvcpp/: wput.dsp
